<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.settings.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/img_bg">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bottom_curve"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:drawableStart="@drawable/baseline_arrow_back_ios"
                android:drawablePadding="8dp"
                android:text="@string/text_settings"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="26dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@mipmap/icon_cs"
                android:drawableEnd="@drawable/baseline_chevron_right"
                android:drawablePadding="20dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:text="@string/text_online_customer"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@mipmap/icon_user_agreement"
                android:drawableEnd="@drawable/baseline_chevron_right"
                android:drawablePadding="20dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:text="@string/text_user_agreement"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@mipmap/icon_privacy"
                android:drawableEnd="@drawable/baseline_chevron_right"
                android:drawablePadding="20dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:text="@string/text_privacy_policy"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@mipmap/icon_about_us"
                android:drawableEnd="@drawable/baseline_chevron_right"
                android:drawablePadding="20dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:text="@string/text_about_us"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_top_curve"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/btn_delete_all_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="33dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:paddingHorizontal="66dp"
                android:paddingVertical="8dp"
                android:text="@string/text_delete_all_notes"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>